force-app/main/default/objects/Role_Code__c/Role_Code__c.object-meta.xml
<CustomObject>
    <label>Role Code</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Role Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>