force-app/main/default/objects/Role_Code__c/fields/Forecast_Group__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Group__c</fullName>
    <label>Forecast Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>