force-app/main/default/objects/Role_Code__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Persona_Value_Sets</valueSetName>
    </valueSet>
</CustomField>