force-app/main/default/objects/Role_Code__c/fields/Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_ID__c</fullName>
    <label>Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>