force-app/main/default/objects/Role_Code__c/fields/Role_Code__c.field-meta.xml
<CustomField>
    <fullName>Role_Code__c</fullName>
    <label>Role Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>